--- a/templates/three.html
+++ b/templates/three.html
@@ -1,5 +1,8 @@
 <!-- <script type="text/javascript" src="javascripts/paper.js"></script> -->
 {% extends "base.html" %}
 {% block content %}
-<script type="text/paperscript" src="static/javascript/three.js" canvas="myCanvas"></script><canvas id="myCanvas" resize="resize"></canvas>
+<body style="margin: 0;">
+<script type="text/javascript" src="static/javascript/three.js" ></script>
+
+</body>
 {% endblock %}
