--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/segmentation">Segmentation</a>
+                <a class="nav-item nav-link" href="/CPPN">CPPN</a>
                 <a class="nav-item nav-link" href="/three">ThreeJS</a>
                 <a class="nav-item nav-link" href="/bloops">Bloops</a>
                 <a class="nav-item nav-link" href="/chaos">Logistic Map</a>
