--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 
-<p class = "text-center"> This is where it put my experiments</p>
+<p class = "text-center"> bla bla bla</p>
 {% endblock %}
