--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,3 +45,13 @@ canvas[resize] {
   height: 25px;
 }
 
+
+html, body {
+  margin: 0;
+  height: 100%;
+}
+#c {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
