--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/segmentation">Segmentation</a>
                 <a class="nav-item nav-link" href="/CPPN">CPPN</a>
-                <a class="nav-item nav-link" href="/three">ThreeJS</a>
+                <a class="nav-item nav-link" href="/modelViewer">Model Viewer</a>
                 <a class="nav-item nav-link" href="/bloops">Bloops</a>
                 <a class="nav-item nav-link" href="/chaos">Logistic Map</a>
                 
