--- a/templates/modelViewer.html
+++ b/templates/modelViewer.html
@@ -3,10 +3,11 @@
 {% block content %}
 <body style="margin: 0;">
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js'></script>
-<script type="module" src="static/javascript/three.js" ></script>
+<script type="module" src="static/javascript/modelViewer.js" ></script>
 
 </body>
 
+<input id = "loadButton" type = "file" style = "visibility: hidden;">
 <canvas id="c"></canvas>
 <div id="dat">
 
