added label functionality

--- a/templates/modelViewer.html
+++ b/templates/modelViewer.html
@@ -4,6 +4,7 @@
 <body style="margin: 0;">
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js'></script>
 <script type="module" src="static/javascript/modelViewer.js" ></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 </body>
 
