--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,15 @@
 
 {% block content %}
 
-<p class = "text-center"> bla bla bla</p>
+  <!-- Header -->
+  <header class="masthead">
+    <div class="container d-flex h-100 align-items-center">
+      <div class="mx-auto text-center">
+        <h2 class="text-white mx-auto mt-2 mb-5">Machine Learning on Point Clouds for Semantic Segmentation</h2>
+        <a href="/modelViewer" class="btn btn-light btn-lg js-scroll-trigger">Get Started</a>
+      </div>
+    </div>
+  </header>
+
+
 {% endblock %}
