--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,6 +34,18 @@ body {
 
 /* Scale canvas with resize attribute to full size */
 
+.masthead {
+  /* The image used */
+  background-image: url("/static/img/tempBackground.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 
 canvas[resize] {
