--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     
     <body>
 
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id = "navbar">
         <a class="navbar-brand" href="/">PointSemantics</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
