added partial meshes

--- a/templates/modelViewer.html
+++ b/templates/modelViewer.html
@@ -30,6 +30,7 @@
 
 <form action="" method="POST" id = "btnMesh">
     <input type="hidden" id = "fileNameOutput" name = "fileNameOutput">
+    <input type="hidden" id = "filters" name = "filters">
 </form>
 
 <canvas id="c"></canvas>
