--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,7 @@ body {
 
 .masthead {
   /* The image used */
-  background-image: url("/static/img/tempBackground.jpg");
+  background-image: url("/static/img/sobelchroma.bmp");
 
   /* Full height */
   height: 100%;
@@ -47,7 +47,10 @@ body {
   background-size: cover;
 }
 
+.navbar-brand {
 
+  font-size: 2em;
+}
 canvas[resize] {
   width: 100%;
   height: 100%;
