--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h2 class="text-white mx-auto mt-2 mb-5">Machine Learning for Semantic Segmentation on Point Clouds </h2>
+        <h2 class="text-white mx-auto mt-2 mb-5">Machine Learning for Semantic Segmentation of Point Clouds </h2>
         <a href="/modelViewer" class="btn btn-light btn-lg js-scroll-trigger">Get Started</a>
       </div>
     </div>
