--- a/templates/modelViewer.html
+++ b/templates/modelViewer.html
@@ -2,6 +2,7 @@
 {% block content %}
 <body style="margin: 0;">
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 
