--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,40 +1,13 @@
-/* 
+
+
+
+/* landing page */
 
 body {
-  padding: 50px;
-  font: 14px "Varela Round", "Lucida Grande", Helvetica, Arial, sans-serif;
-  text-decoration: none;
+  margin: 0px;
 }
 
-a, a:link, a:hover, a:visited, a:active {
-  color: inherit;
-  text-decoration: none;
-  font-size : 50px;
-}
-
-
-h0 {
-  font-size : 100px;
-  font-size : 60%;
-  text-decoration: none;
-}
-
-a:hover h0, a:visited h0, a:active h0 {
-  font-size : 80%;
-  text-decoration: none;
-}
-
-
-
-body {
-  margin: 0;
-  overflow: hidden;
-  height: 100%;
-} */
-
-/* Scale canvas with resize attribute to full size */
-
-.masthead {
+.landingImage {
   /* The image used */
   background-image: url("/static/img/sobelchroma.bmp");
 
@@ -47,34 +20,58 @@ body {
   background-size: cover;
 }
 
-.navbar-brand {
+/* bootstrap tweaks */
 
+.navbar-brand {
   font-size: 2em;
-}
-canvas[resize] {
-  width: 100%;
-  height: 100%;
 }
 
 .spacer{
   height: 25px;
 }
 
+/* threeJS */
 
 html, body {
   margin: 0;
   height: 100%;
 }
+
+canvas[resize] {
+  width: 100%;
+  height: 100%;
+}
+
 #c {
   width: 100%;
   height: 100%;
   display: block;
+  outline: none; 
 }
 
+#metadata {
+  font-size : 0.75em;
+  bottom: 50px;
+  left: 20px;
+  position: fixed;
+  z-index: 3000;
+}
+
+#hoverLabel {
+  font-size : 0.75em;
+  bottom: 200px;
+  left: 20px;
+  position: fixed;
+  z-index: 3000;
+}
+
+
+/* remove firefox ugly outline */
 
 a:focus { 
   outline: none; 
 }
+
 button:focus { 
   outline: none; 
 }
@@ -83,7 +80,7 @@ button::-moz-focus-inner {
   border: 0;
 }
 
-/* dat gui overrides */
+/* dat gui customisation */
 
 .dg.main.a {
   margin-top : 70px;
