--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
   <!-- Header -->
-  <header class="masthead">
+  <header class="landingImage">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h2 class="text-white mx-auto mt-2 mb-5">Machine Learning for Semantic Segmentation of Point Clouds </h2>
