--- a/templates/modelViewer.html
+++ b/templates/modelViewer.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
+
 <body style="margin: 0;">
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js'></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-
+<!-- get data from python -->
 <script type="text/javascript">  
     var inputFiles = {{ inputFiles|tojson }};  
     var outputFiles = {{ outputFiles|tojson }};     
@@ -19,16 +20,26 @@
     {% endif %}
 </script>
 
+<!-- load main script to run app -->
 <script type="module" src="static/javascript/modelViewer.js"  ></script>
+
+<!-- this contains the scene data -->
+<div id="metadata"></div>
+
+<!-- this contains the scene data -->
+<div id="hoverLabel"></div>
 
 </body>
 
+<!-- this listens for load events -->
 <input id = "btnLoad" type = "file" style = "visibility: hidden;">
 
+<!-- this passes filenames to the model -->
 <form action="" method="POST" id = "btnModel">
     <input type="hidden" id = "fileNameInput" name = "fileNameInput">
 </form>
 
+<!-- this passes labelled ply filenames for meshing -->
 <form action="" method="POST" id = "btnMesh">
     <input type="hidden" id = "fileNameOutput" name = "fileNameOutput">
     <input type="hidden" id = "filters" name = "filters">
