--- a/templates/modelViewer.html
+++ b/templates/modelViewer.html
@@ -29,6 +29,9 @@
 <!-- this contains the scene data -->
 <div id="hoverLabel"></div>
 
+<!-- this contains the scene data -->
+<div id="status">status : </div>
+
 </body>
 
 <input id = "btnLoad" type = "file" style = "visibility: hidden;">
