--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,16 +58,17 @@ canvas[resize] {
 }
 
 #hoverLabel {
+  text-align : center;
   font-size : 1.5em;
-  bottom: 200px;
-  left: 20px;
+  bottom:5%;
+  left: 45%;
   position: fixed;
   z-index: 3000;
 }
 
 
 #status {
-  font-size : 0.85em;
+  font-size : 0.85cem;
   top: 20px;
   left: 85%;
   text-align : left;
