--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,4 @@
-
-
-
-/* landing page */
+/* LANDING PAGE */
 
 body {
   margin: 0px;
@@ -20,7 +17,7 @@ body {
   background-size: cover;
 }
 
-/* bootstrap tweaks */
+/* BOOTSTRAP TWEAKS */
 
 .navbar-brand {
   font-size: 2em;
@@ -30,7 +27,7 @@ body {
   height: 25px;
 }
 
-/* threeJS */
+/* THREEJS */
 
 html, body {
   margin: 0;
@@ -77,7 +74,7 @@ canvas[resize] {
 }
 
 
-/* remove firefox ugly outline */
+/* FIREFOX FIXES */
 
 a:focus { 
   outline: none; 
@@ -91,7 +88,7 @@ button::-moz-focus-inner {
   border: 0;
 }
 
-/* dat gui customisation */
+/* DAT GUI*/
 
 .dg.main.a {
   margin-top : 70px;
