--- a/templates/modelViewer.html
+++ b/templates/modelViewer.html
@@ -40,6 +40,11 @@
 
 <input id = "btnLoad" type = "file" style = "visibility: hidden;">
 
+<!-- handles file uploading -->
+<form action = "{{ url_for('upload_file') }}" method = "POST" enctype = "multipart/form-data" id = "uploadFile">
+<input type = "file" name = "file" id = "uploadInput" style = "visibility: hidden;"/>
+</form>
+
 <!-- this listens for load events -->
 <form action="" method="POST" id = "copyFiles">
     <input type="hidden" id = "fileNameLoad" name = "fileNameLoad">
