added reference comments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,7 +88,7 @@ button::-moz-focus-inner {
   border: 0;
 }
 
-/* DAT GUI*/
+/* DAT GUI Light Colour Customisation CSS from https://brm.io/dat-gui-light-theme/ with minor tweaks*/
 
 .dg.main.a {
   margin-top : 70px;
